Link para tela de usuario inserido

--- a/src/app/pages/home/cabecalho/cabecalho.component.html
+++ b/src/app/pages/home/cabecalho/cabecalho.component.html
@@ -11,7 +11,7 @@
    </div>
    <div class="titulo-ingressos">
       <a routerLink="/home">HOME</a>
-      <a routerLink="/ingressos">INGRESSOS</a>
+      <a routerLink="/login">INGRESSOS</a>
       <a routerLink="/noticias">NOTÍCIAS</a></div>
      
 </header>
