--- a/src/app/pages/venda/rodapepag/rodapepag.component.css
+++ b/src/app/pages/venda/rodapepag/rodapepag.component.css
@@ -1,8 +1,7 @@
 /* Estilos Gerais do Rodapé */
 .rodape-f1 {
     /* Mantenha o seu CSS de aparência */
-    background-color: black; 
-    color: #ffffff;
+    background-color: wheat; 
     padding: 20px 0;
     width: 100%;
     
