--- a/src/app/pages/venda/venda.component.html
+++ b/src/app/pages/venda/venda.component.html
@@ -1,1 +1,3 @@
 <app-cabecalho-venda></app-cabecalho-venda>
+<div class="pag"><app-pagamento></app-pagamento></div>
+<app-rodapepag></app-rodapepag>
