tela noticias atualizada

--- a/src/app/pages/news/lista-noticias/lista-noticias.component.html
+++ b/src/app/pages/news/lista-noticias/lista-noticias.component.html
@@ -1,5 +1,6 @@
+<div class="estilopag">
 <div class="news-list-container">
-  
+    <h3></h3>
     <div *ngFor="let noticia of noticias" class="news-card">
 
       <div class="card-imagem">
@@ -15,7 +16,8 @@
           Publicado em: <strong>{{ formatarData(noticia.dataPublicacao) }}</strong>
         </p>
       </div>
-      
+        
     </div>
-    
+<p></p>
+  </div>
   </div>
