--- a/src/app/pages/home/carrossel/carrossel.component.css
+++ b/src/app/pages/home/carrossel/carrossel.component.css
@@ -6,8 +6,9 @@
   min-height: 250px; /* Garante que a altura nunca seja menor que 250px */
   position: relative;
   z-index: 2;
-  padding-top: 100px;
+  padding-top: 150px;
   overflow: hidden; /* Garante que nada das imagens absolutas vaze */
+  margin-top: 100px;
 }
 
 .carrossel-container img {
