--- a/src/app/pages/news/lista-noticias/lista-noticias.component.css
+++ b/src/app/pages/news/lista-noticias/lista-noticias.component.css
@@ -44,13 +44,18 @@ body {
     margin: 0 auto;    /* Centraliza o bloco */
     
     /* AQUI ESTÁ A CORREÇÃO: Marge superior de 30px */
-    margin-top: 50px; 
-    
+    margin-top: 100px; 
     /* Repassando os estilos de grid para espaçamento entre os cards */
     display: grid;
+    margin-left: 18%;
     
-    gap: 50px; 
+    gap: 70px; 
     padding: 0 15px;
+}
+
+.estilopag {
+    background-color: #e1cbee;
+
 }
 
 .news-card {
