--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,8 @@
 <app-cabecalho></app-cabecalho>
+<div class="layoutpag">
 <app-carrossel></app-carrossel>
 <app-lista-pilotos></app-lista-pilotos>
 <app-piloto></app-piloto>
-<app-apoiadores></app-apoiadores>
+<app-equipes></app-equipes>
+<app-apoiadores></app-apoiadores></div>
 <app-rodape></app-rodape>
