--- a/src/app/pages/home/rodape/rodape.component.html
+++ b/src/app/pages/home/rodape/rodape.component.html
@@ -1,11 +1,29 @@
 <footer class="banner-rodape">
     <div class="ban-rod">
+        
+        <div class="container-rodape">
         <img src="HEADERF1LOGO.png" alt="Logo rodape">
-        <div>
+        
+        <div class="textorod">
         <h1>FORMULA 1 MSC CRUISES</h1>
         <p>GRANDE PRÊMIO DE SÃO PAULO 2025</p>
         <span>SÃO PAULO 07-09 NOVEMBRO</span>
-        </div>
+        <div class="redes">
+        <span><br>Redes Sociais</span></div>
+        <div class="rodape-bloco-esquerda">
+            
+            <a href="https://www.instagram.com/f1" target="_blank" aria-label="Instagram Oficial da Fórmula 1">
+                <img src="instlogo.png" 
+                alt="" class="imglogo"> </a>
+            <a href="https://www.facebook.com/Formula1" target="_blank" aria-label="Facebook Oficial da Fórmula 1">
+                <img src="facelogo.png" 
+                alt="" class="imglogo"> </a>
+            <a href="https://www.youtube.com/@Formula1" target="_blank" aria-label="YouTube Oficial da Fórmula 1">
+                <img src="youlogo.png" 
+                alt="" class="imglogo"> </a>
+        </div></div>
+    </div>
+        
     </div>
     <div class="realizacao">
         <h1>Realização</h1>
