--- a/src/app/pages/news/lista-noticias/lista-noticias.component.html
+++ b/src/app/pages/news/lista-noticias/lista-noticias.component.html
@@ -1,3 +1,4 @@
+<h1 class="destaques">DESTAQUES</h1>
 <div class="estilopag">
 <div class="news-list-container">
     <h3></h3>
@@ -18,6 +19,7 @@
       </div>
         
     </div>
+   <div class="botao"><button class="newsbtn">Ver mais notícias</button></div>
 <p></p>
   </div>
   </div>
