--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -1,3 +1,3 @@
-<app-cabecalho></app-cabecalho>
+<div class="layoutnews"><app-cabecalho></app-cabecalho>
 <app-lista-noticias></app-lista-noticias>
-<app-rodape></app-rodape>
+<app-rodape></app-rodape></div>
